package com.housemate.shared.enums;

public enum ShoppingListStatus {
    NOT_STARTED,
    IN_PROGRESS,
    COMPLETED,
}
